--- a/main.html
+++ b/main.html
@@ -2,27 +2,113 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Text-to-Speech App</title>
+  <title>Text to Speech App</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      max-width: 600px;
+      margin: 50px auto;
+      padding: 20px;
+      background: #f5f5f5;
+      border-radius: 8px;
+    }
+
+    textarea {
+      width: 100%;
+      padding: 10px;
+      font-size: 16px;
+      resize: vertical;
+    }
+
+    label, select, input {
+      display: block;
+      margin: 10px 0;
+    }
+
+    input[type="range"] {
+      width: 100%;
+    }
+
+    button {
+      padding: 10px 15px;
+      font-size: 16px;
+      margin: 10px 5px 0 0;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
+
   <h1>Text to Speech</h1>
 
-  <textarea id="text" rows="6" cols="50" placeholder="Enter text here..."></textarea><br><br>
+  <textarea id="text" rows="5" placeholder="Enter text here..."></textarea>
 
   <label for="voice">Voice:</label>
-  <select id="voice"></select><br><br>
+  <select id="voice"></select>
 
-  <label for="rate">Rate:</label>
-  <input type="range" id="rate" min="0.5" max="2" value="1" step="0.1">
-  <span id="rate-value">1</span><br><br>
+  <label for="rate">Rate: <span id="rate-value">1</span></label>
+  <input type="range" id="rate" name="rate" min="0.5" max="2" value="1" step="0.1">
 
-  <label for="pitch">Pitch:</label>
-  <input type="range" id="pitch" min="0" max="2" value="1" step="0.1">
-  <span id="pitch-value">1</span><br><br>
+  <label for="pitch">Pitch: <span id="pitch-value">1</span></label>
+  <input type="range" id="pitch" name="pitch" min="0" max="2" value="1" step="0.1">
 
   <button id="speak">Speak</button>
   <button id="stop">Stop</button>
 
-  <script src="script.js"></script>
+  <script>
+    const synth = window.speechSynthesis;
+    const textInput = document.getElementById('text');
+    const voiceSelect = document.getElementById('voice');
+    const rate = document.getElementById('rate');
+    const pitch = document.getElementById('pitch');
+    const rateValue = document.getElementById('rate-value');
+    const pitchValue = document.getElementById('pitch-value');
+    const speakButton = document.getElementById('speak');
+    const stopButton = document.getElementById('stop');
+
+    let voices = [];
+
+    function populateVoices() {
+      voices = synth.getVoices();
+      voiceSelect.innerHTML = '';
+      voices.forEach((voice, i) => {
+        const option = document.createElement('option');
+        option.value = i;
+        option.textContent = `${voice.name} (${voice.lang})`;
+        if (voice.default) option.textContent += ' — DEFAULT';
+        voiceSelect.appendChild(option);
+      });
+    }
+
+    populateVoices();
+    if (speechSynthesis.onvoiceschanged !== undefined) {
+      speechSynthesis.onvoiceschanged = populateVoices;
+    }
+
+    function speak() {
+      if (synth.speaking) synth.cancel();
+
+      const text = textInput.value.trim();
+      if (!text) return;
+
+      const utterance = new SpeechSynthesisUtterance(text);
+      utterance.voice = voices[voiceSelect.value];
+      utterance.rate = parseFloat(rate.value);
+      utterance.pitch = parseFloat(pitch.value);
+      synth.speak(utterance);
+    }
+
+    speakButton.addEventListener('click', speak);
+    stopButton.addEventListener('click', () => synth.cancel());
+
+    rate.addEventListener('input', () => {
+      rateValue.textContent = rate.value;
+    });
+
+    pitch.addEventListener('input', () => {
+      pitchValue.textContent = pitch.value;
+    });
+  </script>
+
 </body>
 </html>
